2010-08-18 : added a check for cmor_variables making sure axes/grid ids passed are valid
2010-08-18 : downgraded abs min/max CRITICAL error to NORMAL
2010-08-18 : dowgraded invalid min/max from NORMAL error to WARNING
2010-08-10 : cmor_setup, was initalizing strings beyhond the max number fo elts, cause seg fault with python (loop was to CMOR_MAX_ELEMENTS when it should have been CMOR_MAX_ATTRIBUTES)
2010-06-14 : expanded the CMOR_MAX_GRIDS to 100 form 10. And replaced the "10" in the code with CMOR_MAX_GRIDS
2010-06-14 : updated python example and testtable to work w/o error about abs mean
2010-06-11 : shorten the TestTables to a minimum so they can't be confused with the real one and used in production
2010-06-11 : removed tables unused by examples
2010-06-11 : add ${Prefix}/share to the list of locations where to search for tables
2010-06-09 : removing files related to Tables, moving the Tables dir to TestTables
2010-06-09 : cmor axis entry "requested_bounds" now is also valid used to be "bounds_requested"
2010-06-09 : cmor_axis non-monotnic error was showing incoorect set of bad values
2010-06-09 : changed absolute mean error from CRITICAL to NORMAL if less than an order of magnitude off
2010-06-09 : tables generated with min/max now being 3 sigma (from 2) and (20% form 5%)
2010-06-09 : Coord: depth_coord was wrongly defined as positive up, fixed
2010-06-01 : table generation was sometimes gen same value for valid_min and valid_max, fixed
2010-06-01 : table generation using %.4g instead of %.2g for valid min/max
2010-06-01 : new tables to reflect that
2010-06-01 : updated examples to work with abs min/max from tables
2010-06-01 : edited example to have only 1 file to edit when tweaking the data generation in test fortran/C samples.
2010-06-01 : changed cmor_dataset to trim input arguments, revelant mostly for calendar that was declared as wrong if it had extra spaces